crates/swc_ecma_parser/tests/typescript-errors/class/override-with-static/input.ts.stderr
error: 'static' modifier must precede 'override' modifier.
 --> $DIR/tests/typescript-errors/class/override-with-static/input.ts:2:12
  |
2 |   override static t() {}
  |            ^^^^^^

